# NewsManager

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  Makefile  README.md  backend.md  pyproject.toml
backend/app/: main.py  models.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: news.py
backend/app/core/: config.py  db.py
frontend/: bun.lockb  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(marketing)/: layout.tsx  page.tsx
frontend/components/: ContactButton.tsx  Footer.tsx  Header.tsx  RelativeTime.tsx  ThemeSwitcher.tsx  UserNav.tsx
frontend/components/ui/: icons.tsx
frontend/lib/validations/: auth.ts
frontend/services/: actions.ts  newsApi.ts
frontend/types/: news.ts  supabase.ts
frontend/utils/: utils.ts
frontend/utils/supabase/: middleware.ts
instructions/: initial-backend.md
nginx/: nginx.conf
syncer/: Makefile  README.md  go.mod  go.sum  main.go  news_summary.md  summary_schema.json  temp.sql
syncer/cmd/: categories.go  export.go  root.go  sync.go
syncer/cmd/temp/: const.go
syncer/db/: news.db  supabase.sql  table.sql
syncer/db/migrations/: 000001_init_migration.up.sql
syncer/internal/ai/: const.go  openai.go
syncer/internal/crawler/: crawler.go
syncer/internal/definition/: crawler.go
syncer/internal/dto/: db.go  news.go
syncer/internal/sources/: const.go
syncer/pkg/helpers/: collector.go  db.go  html.go  string.go  time.go
(+42 files in other folders)
