[project]
name = "backend"
version = "0.1.0"
description = "News Manager Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "ruff>=0.7.0",
    "sqlmodel>=0.0.22",
    "tenacity>=9.0.0",
    "psycopg>=3.2.3",
]
